--- a/page1.html
+++ b/page1.html
@@ -38,7 +38,27 @@
         </ul>
       </div>  
     </nav>
-    
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href=".">My Website</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page1.html">Page 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page2.html">Page 2</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!--page content-->
     <h1>Page 1</h1>
 
