--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,7 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="page1.html">Page 1</a>
             </li>
             <li class="nav-item">
