--- a/page2.html
+++ b/page2.html
@@ -29,8 +29,8 @@
             <li class="nav-item">
               <a class="nav-link" href="page1.html">Page 1</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="page2.html">Page 2</a>
+            <li class="nav-item">
+              <a class="nav-link active" href="page2.html">Page 2</a>
             </li>
           </ul>
         </div>
