--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   </head>
   <body>
-    <!--nav bar-->
+    <!--
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href=".">My Website</a>
@@ -37,9 +37,19 @@
         </div>
       </div>
     </nav>
-    
-    <!--page content-->
-    <h1>Home Page</h1>
+    -->
+    <div class="row">
+		<div class="col-lg-4"></div>
+		<div class="col-lg-4 text-center pt-5">
+			<h1>Escape Room</h1>
+			<p>This is a generic business website with some hidden features.<br>Look for clues in the Website, find all three to escape!</p>
+				<a href="page1.html" class="btn btn-outline-dark"> 
+					<h1>Start</h1>
+				</a>
+		</div>
+		<div class="col-lg-4"></div>
+	</div>
 
+	
   </body>
 </html>
