--- a/page1.html
+++ b/page1.html
@@ -37,7 +37,13 @@
       </div>
     </nav>
     <!--page content-->
-    <h1>Page 1</h1>
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h1>Our Consultants</h1></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><p>list</p></div>
+	</div>
 
   </body>
 </html>
