--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,13 @@
     </nav>
     
     <!--page content-->
-    <h1>Page 2</h1>
+    <div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h1>About Us</h1></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h1>About Us</h1></div>
+	</div>
 
   </body>
 </html>
