--- a/page1.html
+++ b/page1.html
@@ -13,8 +13,8 @@
     <title>Home - My Webpage</title>
   
   </head>
-  <body>
-    <!--nav bar-->
+  <body class="background">
+    <!--nav 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="">My Website</a>
@@ -36,8 +36,24 @@
         </div>
       </div>
     </nav>
-    <!--page content-->
-    <h1>Page 1</h1>
-
+  -->
+    <video autoplay muted loop id="myVideo">
+		<source src="Video.mp4" type="video/mp4">
+	</video>
+	
+	<div class="overlay">
+		<div class="row">
+			<div class="col-sm-4 text-warning">
+				<h1>Royal Landscaping</h1>
+			</div>
+			<div class="col-sm-4 text-center text-white">
+				<h1>Test2</h1>
+			</div>
+			<div class="col-sm-4 text-center text-white">
+			<h1>Test3</h1>
+			</div>
+		</div>
+	</div>
+	
   </body>
 </html>
