--- a/page2.html
+++ b/page2.html
@@ -39,11 +39,27 @@
     
     <!--page content-->
     <div class="container mt-3">
-		<div class="bg-light p-3" style="width:100%"><h1>About Us</h1></div>
+		<div class="bg-light p-3" style="width:100%"><h1>Our Consultants</h1></div>
 	</div>
 	
 	<div class="container mt-3">
-		<div class="bg-light p-3" style="width:100%"><h1>About Us</h1></div>
+		<div class="bg-light p-3" style="width:100%"><h2>Amun Gus</h2><p>Amun Gus donated $6.9 million to our cause.</p></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h2>John Doe</h2><p>John Doe donated $5 million to our cause.</p></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h2>Richard (Rick) Ast Lee</h2><p>Richard Ast Lee donated $4.2 million to our cause.</p></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h2>Joseph Mahma</h2><p>Joseph Mahma donated $3.5 million to our cause.</p></div>
+	</div>
+	
+	<div class="container mt-3">
+		<div class="bg-light p-3" style="width:100%"><h2>Ryan Yang</h2><p>Ryan Yang donated $0.01 to our cause.</p></div>
 	</div>
 
   </body>
