--- a/page1.html
+++ b/page1.html
@@ -38,11 +38,7 @@
     </nav>
     <!--page content-->
 	<div class="container mt-3">
-		<div class="bg-light p-3" style="width:100%"><h1>Our Consultants</h1></div>
-	</div>
-	
-	<div class="container mt-3">
-		<div class="bg-light p-3" style="width:100%"><p>list</p></div>
+		<div class="bg-light p-3" style="width:100%"><h1>Amrica's #1 Real Estate Company</h1><h2>We've been setting the trends of real estate for years.</h2></div>
 	</div>
 
   </body>
