--- a/page1.html
+++ b/page1.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 2 meta tags should come first in the head; any other head content should come *after* these tags -->
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	
+
 
     <link rel="stylesheet" href="style.css">
     <title>Home - My Webpage</title>
   
   </head>
-  <body class="background">
-    <!--nav 
+  <body>
+ <!--
+  <div>
+    <nav>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="">My Website</a>
@@ -36,21 +40,35 @@
         </div>
       </div>
     </nav>
-  -->
+</div>
+-->
+  
     <video autoplay muted loop id="myVideo">
 		<source src="Video.mp4" type="video/mp4">
 	</video>
 	
 	<div class="overlay">
 		<div class="row">
-			<div class="col-sm-4 text-warning">
-				<h1>Royal Landscaping</h1>
+			<div class="col-sm-2 pt-3">
+				<img src="pine-tree.png" alt-text="Tree Icon" class="icon">
 			</div>
-			<div class="col-sm-4 text-center text-white">
-				<h1>Test2</h1>
+			<div class="col-sm-2 text-warning pt-3">
+				<h1>Primary <br> Real Estate </h1>
 			</div>
-			<div class="col-sm-4 text-center text-white">
-			<h1>Test3</h1>
+			<div class="col-sm-4 text-center text-white pt-5">
+				<br><br><br><br><br><br><br><br><br><br>
+				<h1 class="Bigtext">&nbsp; Real Estate In <br>&nbsp; Northern California</h1>
+				<h4>&nbsp;&nbsp;&nbsp;&nbsp; Homes, Investment Property, and Land for Sale from Humbolt county to Marin.</h4>
+			
+			</div>
+			<div class="col-sm-4 text-end text-white pt-3">
+				<button type="button" class="btn btn-outline-warning btn-xl">Contact</button>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-12 footer text-white text-center ">
+				<h1>Footer</h1>
 			</div>
 		</div>
 	</div>
