--- a/page1.html
+++ b/page1.html
@@ -68,7 +68,7 @@
 		
 		<div class="row">
 			<div class="col-sm-12 footer text-white text-center ">
-				<h1>Footer</h1>
+				<h5>Instagram&nbsp;&nbsp;&nbsp;&nbsp;Email&nbsp;&nbsp;&nbsp;&nbsp;Facebook</h5>
 			</div>
 		</div>
 	</div>
