--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
     <!--page content-->
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-4"> 
+			<div class="col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://images.unsplash.com/photo-1671314986660-cb06c809c05f?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 			
-			<div class="col-sm-4"> 
+			<div class="col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://images.unsplash.com/photo-1700218357228-5f98d972b261?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -62,7 +62,7 @@
 				</div> 		
 			</div>
 			
-			<div class="col-sm-4"> 
+			<div class="col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://images.unsplash.com/photo-1562038969-e85c13ecb2ac?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -72,10 +72,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
 		
-		<div class="row">
-			<div class="col-sm-4"> 
+			<div class="col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://images.unsplash.com/photo-1496672254107-b07a26403885?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2xkJTIwd29tYW58ZW58MHx8MHx8fDA%3D" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -85,8 +83,10 @@
 					</div>
 				</div>
 			</div>
-			
-			<div class="col-sm-4"> 
+		</div>
+		
+		<div class="row">	
+			<div class="mx-auto col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -97,7 +97,7 @@
 				</div>	
 			</div>
 			
-			<div class="col-sm-4"> 
+			<div class="mx-auto col-md-3"> 
 				<div class="card" style="width:100%">
 					<img class="card-img-top" src="https://raw.githubusercontent.com/E-Perko/First_Website/main/ryan.jpg" alt="Card image" style="width:100%">
 					<div class="card-body">
@@ -110,47 +110,5 @@
 		</div>
 	</div>
 		
-		
-		
-		
-		
-		
-		
-		
-	
-	
-	<br>
-	
-	<div class="card" style="width:400px">
-		<img class="card-img-top" src="https://images.unsplash.com/photo-1496672254107-b07a26403885?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2xkJTIwd29tYW58ZW58MHx8MHx8fDA%3D" alt="Card image" style="width:100%">
-		<div class="card-body">
-			<h4 class="card-title">Joline Mahma</h4>
-			<p class="card-text">Joline Mahma donated $3.5 million to our cause.</p>
-			<a href="#" class="btn btn-primary">See Profile</a>
-		</div>
-	</div>
-	
-	<br>
-	
-	<div class="card" style="width:400px">
-		<img class="card-img-top" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=988&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" style="width:100%">
-		<div class="card-body">
-			<h4 class="card-title">Amanda Huggn Kiss</h4>
-			<p class="card-text">Amanda Huggn Kiss donated $314 to our cause.</p>
-			<a href="#" class="btn btn-primary">See Profile</a>
-		</div>
-	</div>
-	
-	<br>
-	
-	<div class="card" style="width:400px">
-		<img class="card-img-top" src="https://raw.githubusercontent.com/E-Perko/First_Website/main/ryan.jpg" alt="Card image" style="width:100%">
-		<div class="card-body">
-			<h4 class="card-title">Ryan Yang</h4>
-			<p class="card-text">Ryan Yang donated $0.01 to our cause.</p>
-			<a href="#" class="btn btn-primary">See Profile</a>
-		</div>
-	</div>
-	
 </body>
 </html>
