--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,10 @@
 			
 			</div>
 			<div class="col-sm-4 text-end text-white pt-3">
-				<button type="button" class="btn btn-outline-warning btn-xl">Contact</button>
+					<button type="button" class="btn btn-outline-warning btn-xl" data-bs-toggle="collapse" data-bs-target="#reveal">Contact</button>
+					<div id="reveal" class="collapse">
+					<h6 class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PASSWORD</h6>
+					</div>
 			</div>
 		</div>
 		
