--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="col-lg-4"></div>
 		<div class="col-lg-4 text-center pt-5">
 			<h1>Escape Room</h1>
-			<p>This is a generic business website with some hidden features.<br>Look for clues in the Website, find all three to escape!</p>
+			<p>This is a generic business website with some hidden features.<br>Look for clues in the wbsite to progress to the next page.</p>
 				<a href="page1.html" class="btn btn-outline-dark"> 
 					<h1>Start</h1>
 				</a>
