--- a/page1.html
+++ b/page1.html
@@ -50,28 +50,32 @@
 	
 	<div class="overlay">
 		<div class="row">
-			<div class="col-sm-2 pt-3">
-				<img src="pine-tree.png" alt-text="Tree Icon" class="icon">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-1 text-center container-fluid pt-3 icon">
+				<img src="pine-tree.png" alt-text="Tree Icon" class="">
 			</div>
-			<div class="col-sm-2 text-warning pt-3">
+			<div class="col-sm-2 text-warning text-center pt-3">
 				<h1 data-bs-toggle="tooltip" data-bs-placement="bottom" title="Choose number 3!">Primary <br> Real Estate </h1>
 			</div>
 			<div class="col-sm-4 text-center text-white pt-5">
-				<br><br><br><br><br><br><br><br><br><br>
-				<h1 class="Bigtext">&nbsp; Real Estate In <br>&nbsp; Northern California</h1>
-				<h4>&nbsp;&nbsp;&nbsp;&nbsp; Homes, Investment Property, and Land for Sale from Humbolt county to Marin.</h4>
-			
 			</div>
-			<div class="col-sm-4 text-end text-white pt-3">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-2 text-center text-white pt-3">
 					<button type="button" class="btn btn-outline-warning btn-xl" data-bs-toggle="collapse" data-bs-target="#reveal">Contact</button>
 					<div id="reveal" class="collapse">
-						
 							<h6 class="text-center" id="revealpassword">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nothing To See Here</h6>
-						
 					</div>
 					<div id="password">
 						<h6 class="text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GYUD>@UHDN</h6>
 					</div>
+			</div>
+			<div class="col-sm-1"></div>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-12 text-center text-white center">
+				<h1 class="Bigtext">&nbsp; Real Estate In <br>&nbsp; Northern California</h1>
+				<h4>&nbsp;&nbsp;&nbsp;&nbsp; Homes, Investment Property, and Land for Sale from Humbolt county to Marin.</h4>
 			</div>
 		</div>
 		
