--- a/page1.html
+++ b/page1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<input type="button" id="button" value="Submit"><!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="script1.js"></script>
+	<script src="script.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <title>Home - My Webpage</title>
