--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 	
 
-    <title>Home - My Webpage</title>
+    <title>Escape Room</title>
   
   </head>
   <body>
