--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
 	<script src="script.js"></script>
 
     <link rel="stylesheet" href="style.css">
-    <title>Home - My Webpage</title>
+    <title>Escape Room</title>
   
   </head>
   <body>
