--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,7 @@
     
     <!--page content-->
 	<div class="container mt-3">
-		<div class="mx-auto bg-primary p-3" data-bs-toggle="collapse" data-bs-target="#clue"><h1 id="center">Our Contributors</h1></button></div>
+		<div class="mx-auto bg-primary p-3" data-bs-toggle="collapse" data-bs-target="#clue"><h1 id="centered">Our Contributors</h1></button></div>
 	</div>
 		<div id="clue" class="collapse">
 			AGRYRYJMJDAHK
